# Classical-and-Quantum-Activated-Feedforward-Neural-Networks

./: Dwave.py  FNN.py  Fujitsu.py  Gurobi.py  QCED.py  README.md  environment.yaml  example.ipynb  fujitsu.py  fujitsu_environment.yaml  fujitsu_environment.yml  pyproject.toml
QUBO_Data/: 00Description.md  00Description.txt  10_MWIS_instances.data  10_QUBO_instances.data  10_maxcut_instances.data  10_tsp_instances.data  15_MWIS_instances.data  15_QUBO_instances.data  15_maxcut_instances.data  20_MWIS_instances.data  20_QUBO_instances.data  20_maxcut_instances.data  40_MWIS_instances.data  40_QUBO_instances.data  40_maxcut_instances.data  4_tsp_instances.data  5_MWIS_instances.data  5_QUBO_instances.data  5_maxcut_instances.data  5_tsp_instances.data  6_tsp_instances.data  80_MWIS_instances.data  80_QUBO_instances.data  80_maxcut_instances.data  8_tsp_instances.data
classical_quantum_QUBO.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
example/: example.ipynb  example2.ipynb
src/classical_quantum_QUBO.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/qubo_solver/: Dwave.py  FNN.py  Fujitsu.py  Gurobi.py  QCED.py  QCED_digital.py  __init__.py
