[project]
name = "classical_quantum_QUBO"
version = "0.1.0"
description = "Quantum/Classical QUBO optimizers"
authors = [
    { name="Chia-Tso Lai", email="chiatsolai@gmail.com" }
]
requires-python = ">=3.9,<3.11"

dependencies = [
    "numpy>=1.22,<1.24",
    "matplotlib",
    "torch>=2.0.0",
    "qutip>=4.7.1",
    "cython<3.0",
]

[project.optional-dependencies]
gurobi = ["gurobipy"] # for using Gurobi
dwave = ["dwave-ocean-sdk"]  # for using D-Wave
qiskit = [
    "qiskit>=1.0.0",
    "qiskit-aer>=0.14.1",
]  # for using QCED_digital (recommended)

[build-system]
requires = ["setuptools>=61.0", "wheel", "numpy>=1.22,<1.24", "cython<3.0"]
build-backend = "setuptools.build_meta"